Closed Bug 71090 Opened 25 years ago Closed 24 years ago

subject with empty encoded-word doesn't decode

Categories

(MailNews Core :: MIME, defect)

defect
Not set
critical

Tracking

(Not tracked)

VERIFIED FIXED
mozilla0.9.9

People

(Reporter: bugzilla, Assigned: bugzilla)

Details

(Whiteboard: have fix)

Attachments

(2 files, 1 obsolete file)

This bug is kind of critical. If you have the following subject: Subject: =?iso-8859-1?q?Ide=3A=20sekret=E6rfunktion=20=2F=20mail-agent?= =?iso-8859-1?q??= The correct decode subject is: Ide: sekretærfunktion / mail-agent Mozilla however shows: Ide: sekretærfunktion / mail-agent =?iso-8859-1?q??= build 20010306
Attached file troubled subject
Status: NEW → ASSIGNED
Target Milestone: --- → mozilla0.9.7
Attached patch just skip empty encoded words (obsolete) — Splinter Review
This is because mozilla doesn't allow empty encoded words (=?iso-8859-1?q??=) See mozilla/mailnews/mime/src/comi18n.cpp#1207. I don't quite understand, why. To just silently skip such words, try attachment 56252 [details] [diff] [review]
Target Milestone: mozilla0.9.7 → mozilla0.9.9
we have a patch. could someone please try it out?
Keywords: patch, review
Attachment #26947 - Attachment mime type: text/plain → message/rfc822
Attachment #26947 - Attachment mime type: message/rfc822 → text/plain
Comment on attachment 56252 [details] [diff] [review] just skip empty encoded words Looks good for me. R=ducarroz
Attachment #56252 - Flags: review+
cc'ing nhotta.
Comment on attachment 56252 [details] [diff] [review] just skip empty encoded words sr=mscott pending approval from nhotta.
Please do i18n mail test (" 8. Internationalization: Mail"), http://www.mozilla.org/quality/smoketests/index.html Here is the test mailbox data. http://www.mozilla.org/quality/intl/tests/data/mailsmoketest.zip jgmyers knows the detail of the code. John, please take a look at the patch.
I did that test and everything looks good to me...
The patch rotted by one line since november, here's updated diff. (content is absolutely the same)
Changing summary. Per RFC 2047, empty encoded-words are not legal. The BNF for "encoded-text" requires at least one character. I don't see a problem with accepting such illegal input. The patch has no obvious problems. The reporter should file a separate bug against the MUA that generated that illegal subject line.
Summary: subject with wrapped encoded chars doesn't decode correct → subject with empty encoded-word doesn't decode
Whiteboard: have fix
Comment on attachment 65602 [details] [diff] [review] Exactly the same patch, diff'ed with latest revision of comi18n.cpp R=ducarroz
Attachment #65602 - Flags: review+
Attachment #56252 - Attachment is obsolete: true
Comment on attachment 65602 [details] [diff] [review] Exactly the same patch, diff'ed with latest revision of comi18n.cpp SR=mscott (from previous patch)
Attachment #65602 - Flags: superreview+
Fixed and checked in. Thanks Denis for the patch.
Status: ASSIGNED → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
v 20020222
Status: RESOLVED → VERIFIED
Product: MailNews → Core
Product: Core → MailNews Core
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: