Fix for bug 71090. Patch provided by Denis Antrushin <adu@sparc.spb.su> Skip over invalid empty encoded-words. R=ducarroz, SR=mscott